# Django-Rest-Framework

./: .gitignore  db.sqlite3  pyproject.toml  requirements.txt
bookstore/: settings.py
